@@ -1641,8 +1641,10 @@ The ``conf.py`` options affecting images and gallery pages are these:
 
     # Images will be scaled down according to IMAGE_THUMBNAIL_SIZE and MAX_IMAGE_SIZE
     # options, but will have to be referenced manually to be visible on the site
-    # (the thumbnail has ``.thumbnail`` added before the file extension).
+    # (the thumbnail has ``.thumbnail`` added before the file extension by default,
+    # but a different naming template can be configured with IMAGE_THUMBNAIL_FORMAT).
     IMAGE_THUMBNAIL_SIZE = 400
+    IMAGE_THUMBNAIL_FORMAT = '{stem}.thumbnail{ext}'
 
 If you add a reST file in ``galleries/gallery_name/index.txt`` its contents will be
 converted to HTML and inserted above the images in the gallery page. The
