@@ -45,6 +45,7 @@ class ScaleImage(Task, ImageProcessor):
 
     def process_tree(self, src, dst):
         """Process all images in a src tree and put the (possibly) rescaled images in the dst folder."""
+        thumb_fmt = self.kw['image_thumbnail_format']
         ignore = set(['.svn'])
         base_len = len(src.split(os.sep))
         for root, dirs, files in os.walk(src, followlinks=True):
@@ -60,7 +61,11 @@ class ScaleImage(Task, ImageProcessor):
                     continue
                 dst_file = os.path.join(dst_dir, src_name)
                 src_file = os.path.join(root, src_name)
-                thumb_file = '.thumbnail'.join(os.path.splitext(dst_file))
+                thumb_stem, thumb_ext = os.path.splitext(src_name)
+                thumb_file = os.path.join(dst_dir, thumb_fmt.format(
+                    stem=thumb_stem,
+                    ext=thumb_ext,
+                ))
                 yield {
                     'name': dst_file,
                     'file_dep': [src_file],
@@ -78,6 +83,7 @@ class ScaleImage(Task, ImageProcessor):
         """Copy static files into the output folder."""
         self.kw = {
             'image_thumbnail_size': self.site.config['IMAGE_THUMBNAIL_SIZE'],
+            'image_thumbnail_format': self.site.config['IMAGE_THUMBNAIL_FORMAT'],
             'max_image_size': self.site.config['MAX_IMAGE_SIZE'],
             'image_folders': self.site.config['IMAGE_FOLDERS'],
             'output_folder': self.site.config['OUTPUT_FOLDER'],
